# BIP-EOS

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  apply_core_runtime_boundary.py  apply_discover_integration.py  archive_legacy_installers.py  atlas_m0064_kickoff.py  bip.py  bootstrap(2).py  bootstrap_academy_curriculum_cleanup.py  bootstrap_academy_curriculum_migration.py  bootstrap_academy_curriculum_v2.py  bootstrap_academy_curriculum_v3.py  bootstrap_academy_m05_bootstrap_engineering.py  bootstrap_be001_constitution.py  bootstrap_be001_generate_ueos_architecture.py  bootstrap_bfs001_constitution.py  bootstrap_bfs002_demo.py  bootstrap_bfs002_template_engine.py  bootstrap_bfs002_template_engine_WORKING.py  bootstrap_bip_engineering_labs_architecture.py  bootstrap_bootstrap_engineering_standard.py  bootstrap_bootstrap_framework.py  bootstrap_c02_scanner_specification.py  bootstrap_c03_token_types_specification.py  bootstrap_canonical_adrs.py  bootstrap_cleanup.py  bootstrap_cleanup_pycache.py  bootstrap_cli001_constitution.py  bootstrap_cli_commands_v1.py  bootstrap_cli_commands_v1_FIXED.py  bootstrap_cli_commands_v1_FIXED2.py  bootstrap_compiler_architecture.py  bootstrap_compiler_architecture_sync.py  bootstrap_compiler_docs_package.py  bootstrap_compiler_frontend_structure.py  bootstrap_compiler_generators.py  bootstrap_compiler_packages.py  (+160 more)
Lab/: lab.toml
archive/: README.md
assets/: README.md
bootstrap/: README.md  __main__.py  bootstrap.py  bootstrap_M03.py  bootstrap_bootstrap_architecture.py  bootstrap_config_package.py  search_imports.py  (+27 more)
(+1420 files in other folders)
